Fix T47529: Selecting paths makes them relative

When selecting file-paths from the interface, initialize the 'Relative' setting from existing paths.